--- a/sample-single-spa/index.html
+++ b/sample-single-spa/index.html
@@ -10,9 +10,7 @@
       {
         "imports": {
           "sample-app": "http://localhost:5000/app.js",
-          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js",
-          "vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
-          "vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.0.7/dist/vue-router.min.js"
+          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js"
         }
       }
     </script>
@@ -27,23 +25,14 @@
   </head>
   <body>
     <script>
-      (function() {
-        Promise.all([System.import('single-spa'), System.import('vue'), System.import('vue-router')]).then(function (modules) {
-          var singleSpa = modules[0];
-          var Vue = modules[1];
-          var VueRouter = modules[2];
-
-          Vue.use(VueRouter)
-
-          singleSpa.registerApplication(
+      System.import('single-spa').then(function (singleSpa) {
+        singleSpa.registerApplication(
             'sample-app',
             () => System.import('sample-app'),
             location => true
           );
-
-          singleSpa.start();
-        })
-      })()
+        singleSpa.start();
+      })
     </script>
     <!-- See https://github.com/joeldenning/import-map-overrides#user-interface  -->
     <import-map-overrides-full show-when-local-storage="overrides-ui"></import-map-overrides-full>
