progress on adding react app

--- a/sample-single-spa/index.html
+++ b/sample-single-spa/index.html
@@ -10,7 +10,8 @@
       {
         "imports": {
           "sample-app": "http://localhost:5000/app.js",
-          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js"
+          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js",
+          "sample-app2": "http://localhost:5002/singleSpaEntry.js"
         }
       }
     </script>
@@ -27,10 +28,15 @@
     <script>
       System.import('single-spa').then(function (singleSpa) {
         singleSpa.registerApplication(
-            'sample-app',
-            () => System.import('sample-app'),
-            location => true
-          );
+          'sample-app',
+          () => System.import('sample-app'),
+          location => location.pathname.startsWith('/') || location.pathname.startsWith('/about')
+        );
+        singleSpa.registerApplication(
+          'sample-app2',
+          () => System.import('sample-app2'),
+          location => location.pathname.startsWith('/app2')
+        );
         singleSpa.start();
       })
     </script>
