--- a/sample-single-spa/index.html
+++ b/sample-single-spa/index.html
@@ -11,7 +11,8 @@
         "imports": {
           "sample-app": "http://localhost:5000/js/app.js",
           "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js",
-          "sample-app2": "http://localhost:5002/index.js"
+          "sample-app2": "http://localhost:5002/index.js",
+          "sample-parcel": "http://localhost:5002/index.js"
         }
       }
     </script>
