working in docker

--- a/sample-single-spa/index.local.html
+++ b/sample-single-spa/index.local.html
@@ -11,7 +11,8 @@
         "imports": {
           "sample-vue": "http://localhost:8080/js/app.js",
           "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.4.1/system/single-spa.min.js",
-          "sample-react": "http://localhost:9001/index.js"
+          "sample-react": "http://localhost:9001/index.js",
+          "sample-vue-parcel": "http://localhost:8081/js/app.js"
         }
       }
     </script>
