added react parcel to vue

--- a/sample-single-spa/index.html
+++ b/sample-single-spa/index.html
@@ -12,7 +12,8 @@
           "sample-vue": "http://localhost:5000/js/app.js",
           "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.4.1/system/single-spa.min.js",
           "sample-react": "http://localhost:5002/index.js",
-          "sample-vue-parcel": "http://localhost:5003/js/app.js"
+          "sample-vue-parcel": "http://localhost:5003/js/app.js",
+          "sample-react-parcel": "http://localhost:5004/index.js"
         }
       }
     </script>
