--- a/sample-single-spa/index.local.html
+++ b/sample-single-spa/index.local.html
@@ -12,7 +12,8 @@
           "sample-vue": "http://localhost:8080/js/app.js",
           "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.4.1/system/single-spa.min.js",
           "sample-react": "http://localhost:9001/index.js",
-          "sample-vue-parcel": "http://localhost:8081/js/app.js"
+          "sample-vue-parcel": "http://localhost:8081/js/app.js",
+          "sample-react-parcel": "http://localhost:9002/index.js"
         }
       }
     </script>
