--- a/sample-single-spa/index.html
+++ b/sample-single-spa/index.html
@@ -17,15 +17,19 @@
           "vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
           "vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.1.3/dist/vue-router.min.js",
           "react": "https://unpkg.com/react@16.12.0/umd/react.production.min.js",
-          "react-dom": "https://unpkg.com/react-dom@16.12.0/umd/react-dom.production.min.js"
+          "react-dom": "https://unpkg.com/react-dom@16.12.0/umd/react-dom.production.min.js",
+          "axios": "https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"
         }
       }
     </script>
+    <!-- PRELOADS -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.4.1/system/single-spa.min.js" as="script" crossorigin="anonymous" />
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js" as="script" crossorigin="anonymous" />
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/vue-router@3.1.3/dist/vue-router.min.js" as="script" crossorigin="anonymous" />
     <link rel="preload" href="https://unpkg.com/react@16.12.0/umd/react.production.min.js" as="script" crossorigin="anonymous" />
     <link rel="preload" href="https://unpkg.com/react-dom@16.12.0/umd/react-dom.production.min.js" as="script" crossorigin="anonymous" />
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" as="script" crossorigin="anonymous" />
+    <!-- SCRIPTS -->
     <script src="https://unpkg.com/import-map-overrides@1.7.2/dist/import-map-overrides.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/system.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/extras/amd.min.js"></script>
@@ -35,7 +39,8 @@
   </head>
   <body>
     <script>
-      Promise.all([System.import('single-spa'), System.import('vue'), System.import('vue-router'), System.import('react'), System.import('react-dom')]).then(function (modules) {
+      Promise.all([System.import('single-spa'), System.import('vue'), System.import('vue-router'), 
+      System.import('react'), System.import('react-dom'), System.import('axios')]).then(function (modules) {
         var singleSpa = modules[0];
 
         singleSpa.registerApplication(
